kgo/app/03_httproute_host.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: back2future-host
spec:
  parentRefs:
    - name: kong
  hostnames:
    - "back2future.kong.builders"
  rules:
    - backendRefs:
        - name: back2future-quote-service
          port: 8080
