kgo/app/03_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: back2future-ingress
  annotations:
    konghq.com/strip-path: "true"
    external-dns.alpha.kubernetes.io/hostname: back2future.kong.builders
spec:
  ingressClassName: kong
  rules:
    - host: back2future.kongproxy.me
      http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: back2future-quote-service
                port:
                  number: 8080
